# seminario_de_integracion__manana-_gomez

./: README.md
seminario/modulo 1/pythom_basics/: 01_hello_word.py  02_input.py  03_variables.py  04_operadores.py  05_funciones_math.py  06 condicionales.py  07 match case.py  08 ciclos for.py  09 ciclos while.py  10 funciones.py  11 listas.py  a.py  ejercioso x punto.py
seminario/modulo 2/shopapi/: .env.example  .gitignore  main.py  pyproject.toml
seminario/modulo 2/shopapi/config/: settings.py  urls.py
seminario/modulo 2/shopapi/store/: admin.py  filters.py  pagination.py  permissions.py  urls.py
seminario/modulo 2/shopapi/store/migrations/: 0001_initial.py  0002_product.py  0003_order_orderitem.py
seminario/modulo 2/shopapi/store/models/: __init__.py  category.py  order.py  product.py
seminario/modulo 2/shopapi/store/serializers/: __init__.py  auth.py  category.py  product.py  user.py
seminario/modulo 2/shopapi/store/views/: __init__.py  auth.py  category.py  health.py  product.py  user.py
seminario/modulo 2/vehiculos_api/: .env  vehiculos_api.postman_collection.json  vehiculos_api_env.postman_environment.json
seminario/modulo 3/: package-lock.json  package.json  tsconfig.json
seminario/modulo 3/src/: ejercicio1.ts  ejercicio2.ts  ejercicio3.ts  ejercicio4.ts  ejercicio5.ts  ejercicio6.ts  ejercicio7.ts  ejercicio8.ts  ejercicio9.ts  envios.ts  hola.ts  logs.ts  parteA_primitivos.ts  parteB_arrays.ts  parteC_tuplas.ts  servidores.ts  validadorRegistro.ts
seminario/modulo 3/typescript/: 01-if-simple.ts  02-if-else.ts  03-if-multiple.ts  09-while.ts  (+22 more)
(+21 files in other folders)
